# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "elide-llm"
description = "LLM-mediated entity recognizer (text NER + image VLM) for the Elide toolkit"
keywords = ["rig", "llm", "ner", "pii"]
categories = ["text-processing", "api-bindings"]
readme = "README.md"

version = { workspace = true }
rust-version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
publish = { workspace = true }

authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }

[features]
## No backend on by default: enable `rig` (or a provider feature, which
## implies it) for the rig-backed network backend, or `mock` for the
## in-process stub.
default = []

## Ship the rig-backed `RigBackend`: the provider clients, the HTTP middleware
## stack, and the rig dependency itself. Without it the crate ships only the
## `LlmBackend` trait, the recognizer, candidates, prompts.
rig = [
    "dep:rig",
    "dep:reqwest-middleware",
    "dep:reqwest-retry",
    "dep:reqwest-tracing",
    "dep:thiserror",
]

## Ship the no-op `MockBackend` for tests, examples, and offline wiring.
mock = []
## Load prompt wording from a Jinja2 template file (`Jinja2Prompt`).
jinja2 = ["dep:minijinja"]

## Enable the OpenAI GPT completion provider (implies `rig`).
openai-gpt = ["rig"]
## Enable the Anthropic Claude completion provider (implies `rig`).
anthropic-claude = ["rig"]
## Enable the Google Gemini completion provider (implies `rig`).
google-gemini = ["rig"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
# Internal crates
elide-core = { workspace = true, features = ["image", "serde"] }

# (De)serialization
serde = { workspace = true, features = [] }

# Derive macros & error handling
derive_builder = { workspace = true, features = [] }
thiserror = { workspace = true, features = [], optional = true }

# Async runtime & parallelism
async-trait = { workspace = true, features = [] }

# Observability
tracing = { workspace = true, features = [] }

# Text processing
unicode-normalization = { workspace = true, features = [] }

# AI & LLM frameworks
rig = { workspace = true, features = ["derive", "reqwest-middleware"], optional = true }

# Templating & schema
minijinja = { workspace = true, features = [], optional = true }
schemars = { workspace = true, features = [] }

# HTTP client & middlewares
reqwest-middleware = { workspace = true, features = [], optional = true }
reqwest-retry = { workspace = true, features = [], optional = true }
reqwest-tracing = { workspace = true, features = [], optional = true }

[dev-dependencies]
# Async runtime & parallelism
tokio = { workspace = true, features = ["macros", "rt"] }
