# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "elide-ner"
description = "NER traits and language detection for the Elide toolkit"
keywords = ["ner", "nlp", "pii"]
categories = ["text-processing"]
readme = "README.md"

version = { workspace = true }
rust-version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
publish = { workspace = true }

authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }

[features]
## No features on by default: the NER traits ship bare. Enable `lingua`
## for language detection, or `mock` for the no-op backend.
default = []

## Language detection via the `lingua` crate.
lingua = ["dep:lingua"]
## Ship the no-op `MockBackend` for tests, examples, and offline wiring.
mock = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
# Internal crates
elide-core = { workspace = true, features = ["serde"] }

# (De)serialization
serde = { workspace = true, features = ["derive"] }

# Derive macros & error handling
derive_builder = { workspace = true, features = [] }

# Primitive datatypes
uuid = { workspace = true, features = ["v7"] }
hipstr = { workspace = true, features = [] }

# Async runtime & parallelism
async-trait = { workspace = true, features = [] }

# Observability
tracing = { workspace = true, features = [] }

# Natural language processing
lingua = { workspace = true, features = [], optional = true }

[dev-dependencies]
# Async runtime & parallelism
tokio = { workspace = true, features = ["macros", "rt"] }
