# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "elide-ner"
description = "NER traits and language detection for the Elide toolkit"
keywords = ["ner", "nlp", "pii"]
categories = ["text-processing"]
readme = "README.md"

version = { workspace = true }
rust-version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
publish = { workspace = true }

authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }

[features]
## No features on by default: the NER traits ship bare. Enable `mock`
## for the no-op backend.
default = []

## Ship the no-op `MockBackend` for tests, examples, and offline wiring.
mock = []

## Derive `schemars::JsonSchema` on the public strategy enums
## (`AlignmentMode`, `AggregationStrategy`) and the re-exported core types.
schema = ["elide-core/schema", "dep:schemars"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
# Internal crates
elide-core = { workspace = true, features = ["serde"] }

# (De)serialization
serde = { workspace = true, features = ["derive"] }
schemars = { workspace = true, features = [], optional = true }

# Derive macros & error handling
derive_builder = { workspace = true, features = [] }

# Primitive datatypes
uuid = { workspace = true, features = ["v7"] }
hipstr = { workspace = true, features = [] }

# Async runtime & parallelism
async-trait = { workspace = true, features = [] }

[dev-dependencies]
# Async runtime & parallelism
tokio = { workspace = true, features = ["macros", "rt"] }
