# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "elide-pattern"
description = "Pattern and dictionary recognizers for PII/PHI detection"
keywords = ["elide", "pattern", "dictionary", "pii"]
categories = ["text-processing"]
readme = "README.md"

version = { workspace = true }
rust-version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
publish = { workspace = true }

authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
# Internal crates
elide-context = { workspace = true, features = [] }
elide-core = { workspace = true, features = ["serde"] }

# Async
async-trait = { workspace = true, features = [] }

# (De)serialization
serde = { workspace = true, features = ["derive"] }
toml = { workspace = true, features = ["parse"] }
csv = { workspace = true, features = [] }

# Derive macros & error handling
derive_builder = { workspace = true, features = [] }
derive_more = { workspace = true, features = ["from"] }

# Text processing
regex = { workspace = true, features = [] }
aho-corasick = { workspace = true, features = [] }

# Checksums & validators
bs58 = { workspace = true, features = ["check"] }
iban_validate = { workspace = true }
phonenumber = { workspace = true }

[dev-dependencies]
# Async runtime & parallelism
tokio = { workspace = true, features = ["macros", "rt"] }
