# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "elide"
description = "Composable component library for elide pipelines: recognizers, dedup layers, checks, redaction strategies"
keywords = ["elide", "toolkit", "components", "pipeline"]
categories = ["data-structures"]
readme = "README.md"

version = { workspace = true }
rust-version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
publish = { workspace = true }

authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
## The recognizer crates most pipelines use: pattern, NER, and LLM. Set
## `default-features = false` to drop them and opt into only what you need
## (e.g. `codec`, `serde`).
default = ["pattern", "ner", "llm"]

## Derive `serde::{Serialize, Deserialize}` on the re-exported core
## domain types. Recognizer crates (`pattern`/`ner`/`llm`) need serde
## structurally and pull it in regardless; `codec` forwards it when both
## are enabled.
serde = ["elide-core/serde", "elide-codec?/serde"]

## Re-export the pattern crate as `elide::recognition::pattern`.
pattern = ["dep:elide-pattern"]
## Re-export the NER crate as `elide::recognition::ner`.
ner = ["dep:elide-ner"]
## Re-export the LLM crate as `elide::recognition::llm`.
llm = ["dep:elide-llm"]

## Re-export the codec crate as `elide::codec`. On its own this enables
## only the codec's default formats; use the per-modality or per-format
## `codec-*` features below to pull in the shipped format handlers.
codec = ["dep:elide-codec"]

## Per-modality format groups (each aggregates its per-format features).
codec-text = ["codec-txt", "codec-json", "codec-html", "codec-xml"]
codec-tabular = ["codec-csv", "codec-xlsx"]
codec-image = ["codec-png", "codec-jpeg", "codec-tiff"]
codec-audio = ["codec-wav", "codec-mp3"]

## Per-format handlers.
codec-txt = ["codec", "elide-codec/txt"]
codec-json = ["codec", "elide-codec/json"]
codec-html = ["codec", "elide-codec/html"]
codec-xml = ["codec", "elide-codec/xml"]
codec-csv = ["codec", "elide-codec/csv"]
codec-xlsx = ["codec", "elide-codec/xlsx"]
codec-png = ["codec", "elide-codec/png"]
codec-jpeg = ["codec", "elide-codec/jpeg"]
codec-tiff = ["codec", "elide-codec/tiff"]
codec-wav = ["codec", "elide-codec/wav"]
codec-mp3 = ["codec", "elide-codec/mp3"]

## Ship the no-op mock backends in the re-exported `ner`/`llm` crates.
mock = ["elide-ner?/mock", "elide-llm?/mock"]

[dependencies]
# Internal crates
elide-core = { workspace = true, features = [] }
elide-pattern = { workspace = true, features = [], optional = true }
elide-ner = { workspace = true, features = [], optional = true }
elide-llm = { workspace = true, features = [], optional = true }
elide-codec = { workspace = true, features = [], optional = true }

# Derive macros & error handling
derive_builder = { workspace = true, features = [] }

# Primitive datatypes
bytes = { workspace = true, features = [] }
uuid = { workspace = true, features = ["v4"] }

# Encoding & hashing
sha2 = { workspace = true, features = [] }
hex = { workspace = true, features = [] }

# Async runtime & parallelism (concurrent recognizer join)
futures = { workspace = true, features = [] }

# Observability
tracing = { workspace = true, features = [] }

[dev-dependencies]
# Async runtime & parallelism
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }

# Codec round-trip e2e tests
[[test]]
name = "e2e_txt"
required-features = ["codec-txt", "mock"]

[[test]]
name = "e2e_json"
required-features = ["codec-json", "mock"]

[[test]]
name = "e2e_html"
required-features = ["codec-html", "mock"]

[[test]]
name = "e2e_csv"
required-features = ["codec-csv", "mock"]
