# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "elide"
description = "Composable component library for Elide pipelines: recognizers, dedup layers, checks, redaction strategies"
keywords = ["elide", "toolkit", "components", "pipeline"]
categories = ["data-structures"]
readme = "README.md"

version = { workspace = true }
rust-version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
publish = { workspace = true }

authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
## The recognizer crates most pipelines use: pattern, NER, and LLM. Set
## `default-features = false` to drop them and opt into only what you need
## (e.g. `codec`, `serde`).
default = ["pattern", "ner", "llm"]

## Derive `serde::{Serialize, Deserialize}` on the re-exported core
## domain types. Recognizer crates (`pattern`/`ner`/`llm`) need serde
## structurally and pull it in regardless; `codec` forwards it when both
## are enabled.
serde = ["dep:serde", "dep:erased-serde", "elide-core/serde", "elide-codec?/serde"]

## Re-export the pattern crate as `elide::recognition::pattern`.
pattern = ["dep:elide-pattern"]
## Re-export the NER crate as `elide::recognition::ner`.
ner = ["dep:elide-ner"]

## Re-export the LLM crate as `elide::recognition::llm`. Lean by default
## (the trait, recognizer, prompts, and — with `mock` — the stub backend);
## add `llm-rig` or a provider feature for the rig-backed network backend.
llm = ["dep:elide-llm"]
## The rig-backed `RigBackend` and its HTTP stack in the re-exported LLM
## crate.
llm-rig = ["llm", "elide-llm/rig"]
## The OpenAI GPT provider for the rig LLM backend (implies `llm-rig`).
llm-openai = ["llm", "elide-llm/openai-gpt"]
## The Anthropic Claude provider for the rig LLM backend (implies `llm-rig`).
llm-anthropic = ["llm", "elide-llm/anthropic-claude"]
## The Google Gemini provider for the rig LLM backend (implies `llm-rig`).
llm-gemini = ["llm", "elide-llm/google-gemini"]

## Re-export the SST crate as `elide::recognition::stt`.
stt = ["dep:elide-stt", "audio"]
## Re-export the OCR crate as `elide::recognition::ocr`.
ocr = ["dep:elide-ocr", "image"]

## The `audio` modality. Implied by the audio codec formats.
audio = ["elide-core/audio"]
## The `image` modality. Implied by the image codec formats.
image = ["elide-core/image"]
## The `tabular` modality. Implied by the tabular codec formats.
tabular = ["elide-core/tabular"]

## Re-export the codec crate as `elide::codec`. On its own this enables
## only the codec's default formats; use the per-modality or per-format
## `codec-*` features below to pull in the shipped format handlers.
codec = ["dep:elide-codec"]

## Per-modality format groups (each aggregates its per-format features).
codec-text = ["codec-txt", "codec-json", "codec-html", "codec-xml"]
codec-tabular = ["codec-csv", "codec-xlsx"]
codec-image = ["codec-png", "codec-jpeg", "codec-tiff"]
codec-audio = ["codec-wav", "codec-mp3"]
codec-document = ["codec-docx"]

## Per-format handlers.
codec-txt = ["codec", "elide-codec/txt"]
codec-json = ["codec", "elide-codec/json"]
codec-html = ["codec", "elide-codec/html"]
codec-xml = ["codec", "elide-codec/xml"]
codec-csv = ["codec", "tabular", "elide-codec/csv"]
codec-xlsx = ["codec", "tabular", "elide-codec/xlsx"]
codec-png = ["codec", "image", "elide-codec/png"]
codec-jpeg = ["codec", "image", "elide-codec/jpeg"]
codec-tiff = ["codec", "image", "elide-codec/tiff"]
codec-wav = ["codec", "audio", "elide-codec/wav"]
codec-mp3 = ["codec", "audio", "elide-codec/mp3"]
codec-docx = ["codec", "elide-codec/docx"]

## Ship the no-op mock backends in the re-exported recognizer crates.
mock = ["elide-ner?/mock", "elide-llm?/mock", "elide-stt?/mock", "elide-ocr?/mock"]

## The reversible `Encrypt` operator (AES-256-GCM) and its `KeyProvider`.
crypto = ["dep:aes-gcm", "dep:base64"]

[dependencies]
# Internal crates
elide-core = { workspace = true, features = [] }
elide-context = { workspace = true, features = [] }
elide-pattern = { workspace = true, features = [], optional = true }
elide-ner = { workspace = true, features = [], optional = true }
elide-llm = { workspace = true, features = [], optional = true }
elide-stt = { workspace = true, features = [], optional = true }
elide-ocr = { workspace = true, features = [], optional = true }
elide-codec = { workspace = true, features = [], optional = true }

# (De)serialization
serde = { workspace = true, features = [], optional = true }
erased-serde = { workspace = true, features = [], optional = true }

# Primitive datatypes
bytes = { workspace = true, features = [] }
uuid = { workspace = true, features = ["v4"] }

# Encoding & hashing
sha2 = { workspace = true, features = [] }
hex = { workspace = true, features = [] }
base64 = { workspace = true, features = ["std"], optional = true }

# Cryptography
aes-gcm = { workspace = true, features = ["aes", "getrandom"], optional = true }

# Async runtime & parallelism
futures = { workspace = true, features = [] }

# Observability
tracing = { workspace = true, features = [] }

[dev-dependencies]
# (De)serialization
serde_json = { workspace = true, features = [] }

# Async runtime & parallelism
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }

# Container formats
zip = { workspace = true }

# Codec round-trip e2e tests
[[test]]
name = "e2e_txt"
required-features = ["codec-txt", "mock", "serde"]

[[test]]
name = "e2e_json"
required-features = ["codec-json", "mock", "serde"]

[[test]]
name = "e2e_html"
required-features = ["codec-html", "mock", "serde"]

[[test]]
name = "e2e_csv"
required-features = ["codec-csv", "mock", "serde"]

[[test]]
name = "e2e_docx"
required-features = ["codec-docx", "codec-png", "llm", "mock", "serde"]

[[test]]
name = "e2e_wav"
required-features = ["codec-wav", "stt", "mock", "serde"]

[[test]]
name = "e2e_mp3"
required-features = ["codec-mp3", "stt", "mock", "serde"]

[[test]]
name = "e2e_png"
required-features = ["codec-png", "ocr", "mock", "serde"]
