# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "veil-ner"
description = "NER traits and language detection for the Veil toolkit"
keywords = ["ner", "nlp", "pii"]
categories = ["text-processing"]
readme = "README.md"

version = { workspace = true }
rust-version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
publish = { workspace = true }

authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }

[features]
default = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
# Internal crates
veil-core = { workspace = true, features = ["serde"] }

# Serialization
serde = { workspace = true, features = ["derive"] }

# Derive macros and error handling
derive_builder = { workspace = true, features = [] }

# Primitive datatypes
uuid = { workspace = true, features = ["v7"] }
type-map = { workspace = true, features = [] }

# Async runtime and parallelism
async-trait = { workspace = true, features = [] }

# Observability
tracing = { workspace = true, features = [] }

# Text processing (language detection)
lingua = { workspace = true, features = [] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
