# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "veil-pattern"
description = "Pattern and dictionary recognizers for PII/PHI detection"
keywords = ["veil", "pattern", "dictionary", "pii"]
categories = ["text-processing"]
readme = "README.md"

version = { workspace = true }
rust-version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
publish = { workspace = true }

authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
# Internal crates
veil-context = { workspace = true, features = [] }
veil-core = { workspace = true, features = [] }

# Serialization
serde = { workspace = true, features = [] }
toml = { workspace = true, features = ["parse"] }

# Derive macros and error handling
derive_builder = { workspace = true, features = [] }
derive_more = { workspace = true, features = ["from"] }

# Async runtime and parallelism
async-trait = { workspace = true, features = [] }

# Text processing
regex = { workspace = true, features = [] }
aho-corasick = { workspace = true, features = [] }

# Tabular document parsing
csv = { workspace = true, features = [] }

# Checksum / encoding
bs58 = { workspace = true, features = ["check"] }
iban_validate = { workspace = true }
phonenumber = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
